# llmslim

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  SECURITY.md  benchmark.py  pyproject.toml  release_notes.md  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: benchmark_regression.md  bug_report.md  config.yml  documentation_issue.md  feature_request.md  performance_regression.md
.github/workflows/: ci.yml  release.yml
assets/: generate_benchmark_charts.py  llmslim_manual_asset_prompts.json
benchmarks/: benchmark.py  benchmark_memory.py  benchmark_quality.py  benchmark_regression.py  benchmark_rewrite.py  benchmark_speed.py  results.md
context_compressor/: __init__.py  chunking.py  cli.py  core.py  cost.py  embeddings.py  pipelines.py  ranking.py  tokenization.py  tokens.py
examples/: chat_prompt_example.py  custom_provider_example.py  long_document_example.py  rag_pipeline_example.py  rewrite_example.py
llmslim/: __init__.py  analysis.py  chunking.py  cli.py  core.py  embeddings.py  modes.py  pipelines.py  py.typed  ranking.py  tokenization.py
llmslim/optimizers/: __init__.py  json_opt.py  markdown_opt.py  xml_opt.py  yaml_opt.py
llmslim/rewrite/: __init__.py  base.py  engine.py  templates.py  validation.py
notebooks/: demo.py
tests/: test_analysis.py  test_chunking.py  test_cli.py  test_core.py  test_determinism.py  test_dx.py  test_edge_cases.py  test_entities.py  test_instruction_detection.py  test_modes.py  test_optimizers.py  test_pipeline.py  test_providers.py  test_ranking.py  test_rewrite.py  test_structured_invariants.py  test_templates.py  test_v02_regression.py  test_v03_regression.py  test_validation.py
web/: next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts
web/src/app/articles/: layout.tsx  page.tsx
web/src/app/articles/[slug]/: page.tsx
web/src/app/benchmarks/: layout.tsx  page.tsx
web/src/app/benchmarks/[slug]/: page.tsx
web/src/app/docs/: layout.tsx  page.tsx
web/src/app/docs/[slug]/: page.tsx
web/src/app/integrations/: layout.tsx  page.tsx
web/src/app/integrations/[slug]/: page.tsx
web/src/app/playground/: layout.tsx  page.tsx
web/src/components/design-system/: Showcase.tsx  index.ts
web/src/components/design-system/backgrounds/: AnimatedGradientMesh.tsx  AuroraBackground.tsx  CursorGlow.tsx  GridBackground.tsx  NoiseOverlay.tsx
web/src/components/design-system/ui/: AnimatedButton.tsx  BenchmarkCard.tsx  Card.tsx  Charts.tsx  CodeWindow.tsx  CommandPalette.tsx  ComparisonCard.tsx  FeatureCard.tsx  MetricCard.tsx  Pipeline.tsx  Timeline.tsx
web/src/components/docs/: DocCallout.tsx  DocCodeBlock.tsx  DocSidebar.tsx
web/src/components/icons/: GithubIcon.tsx
web/src/components/integrations/: IntegrationIcon.tsx
web/src/components/landing/: ArchitectureSection.tsx  BenchmarksSection.tsx  CalculatorSection.tsx  CodeExamplesSection.tsx  CtaSection.tsx  FaqSection.tsx  FeatureGridSection.tsx  FloatingSectionNavigator.tsx  Footer.tsx  HeroSection.tsx  IntegrationsSection.tsx  MarqueeSection.tsx  Navbar.tsx  PipelineSection.tsx  RoadmapSection.tsx  TestimonialsSection.tsx
web/src/components/studio/: ClientStudioWrapper.tsx  LLMSlimStudio.tsx  StudioHeader.tsx  StudioPromptEditor.tsx  StudioResultsPanel.tsx  StudioSkeleton.tsx  StudioVisualization.tsx
web/src/config/: site.ts
web/src/data/: articles.ts  benchmarks.ts  docs.ts  integrations.ts
web/src/lib/: seo.ts
